<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SteamMarketApp</string>
    <!-- Choose Portfolio-->
    <string name="getPortfolioData">Get Portfolio Data</string>
    <string name="enterSteamID">Enter your SteamID here…</string>
    <string name="steamIDExample1">1. Open your browser and go to your steam profile page.</string>
    <string name="steamIDExample2">2. In the search bar you will find something resembling this: https://steamcommunity.com/****/****/</string>
    <string name="steamIDExample3">3. Copy and paste the part where the ****/**** are in the example provided.</string>
    <string name="steamIDExample4">4. Take a seat, this will take some time. 4 Seconds for every item different to the ones before, because we don\'t want to get banned form valve servers for sending too many requests.</string>
    <!-- Item List -->
    <string name="refresh">Refresh</string>
    <string name="delete_all">Delete all</string>
    <string name="add">Add</string>
    <!-- Item CardView -->
    <string name="not_found">Not found</string>
    <string name="item_name">Name:</string>
    <string name="item_volume">Volume of last 24h:</string>
    <string name="item_price">Price:</string>
    <string name="item_price_median">Price Median:</string>
    <string name="item_amount">Amount:</string>
    <string name="currency">€</string>
    <!-- Portfolio Overview -->
    <string name="overview_name">Portfolio:</string>
    <string name="overview_value">Value:</string>
    <string name="overview_show_item_list">Show Item List</string>
    <string name="overview_update_portfolio">Update Portfolio</string>
    <!-- Snapshot Overview -->
    <string name="snapshot_index">Snapshot Nr.:</string>
    <string name="snapshot_value">Value:</string>
</resources>