<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp"
    tools:context=".activities.PortfolioDownload">

    <Button
        android:id="@+id/buttonGetPortfolioData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/area"
        android:text="@string/getPortfolioData"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEnterSteamID" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEnterSteamID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSteamIDExample4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/elements"
            android:hint="@string/enterSteamID" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSteamIDExample1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/area"
        android:padding="4sp"
        android:text="@string/steamIDExample1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/textViewSteamIDExample2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/area"
        android:padding="4sp"
        android:text="@string/steamIDExample2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSteamIDExample1" />

    <TextView
        android:id="@+id/textViewSteamIDExample3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/area"
        android:padding="4sp"
        android:text="@string/steamIDExample3"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSteamIDExample2" />

    <TextView
        android:id="@+id/textViewSteamIDExample4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/area"
        android:text="@string/steamIDExample4"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSteamIDExample3"
        android:padding="4sp" />

</androidx.constraintlayout.widget.ConstraintLayout>