<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSnapshotCardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp"
    android:background="@color/area"
    android:padding="8sp">

    <TextView
        android:id="@+id/textViewSnapshotIndexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snapshot_index"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSnapshotIndexValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/not_found"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textViewSnapshotIndexText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSnapshotValueValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSnapshotValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/snapshot_value"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textViewSnapshotValueValue"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>