<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/element"
        android:padding="8dp">

        <TextView
            android:id="@+id/itemCardNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCardNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardNameText"
            app:layout_constraintTop_toTopOf="@+id/itemCardNameText" />

        <TextView
            android:id="@+id/itemCardVolumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_volume"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardNameText" />

        <TextView
            android:id="@+id/itemCardVolumeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardVolumeText"
            app:layout_constraintTop_toTopOf="@+id/itemCardVolumeText" />

        <TextView
            android:id="@+id/itemCardMedianText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_price_median"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardVolumeText" />

        <TextView
            android:id="@+id/itemCardMedianValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardMedianText"
            app:layout_constraintTop_toTopOf="@+id/itemCardMedianText" />

        <TextView
            android:id="@+id/itemCardMedianCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardMedianValue"
            app:layout_constraintTop_toTopOf="@+id/itemCardMedianText" />

        <TextView
            android:id="@+id/itemCardPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_price"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardMedianText" />

        <TextView
            android:id="@+id/itemCardPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardPriceText"
            app:layout_constraintTop_toTopOf="@+id/itemCardPriceText" />

        <TextView
            android:id="@+id/itemCardPriceCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardPriceValue"
            app:layout_constraintTop_toTopOf="@+id/itemCardPriceText" />

        <TextView
            android:id="@+id/itemCardAmountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_amount"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardPriceText" />

        <TextView
            android:id="@+id/itemCardAmountValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/itemCardAmountText"
            app:layout_constraintTop_toTopOf="@+id/itemCardAmountText" />

        <TextView
            android:id="@+id/itemCardPriceTotalCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemCardAmountText" />

        <TextView
            android:id="@+id/itemCardPriceTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/not_found"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/itemCardPriceTotalCurrency"
            app:layout_constraintTop_toTopOf="@+id/itemCardAmountText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>