<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/teal_200"
        android:padding="8dp">

        <TextView
            android:id="@+id/itemCardViewTextViewItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/loading"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemNameText"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemNameText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/loading"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemVolumeText"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemVolumeText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/loading"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemPriceText"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemPriceText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemVolumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardViewTextViewItemNameText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardViewTextViewItemPriceMedianText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPriceMedianText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_price_median"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemCardViewTextViewItemVolumeText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPriceMedian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/loading"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemPriceMedianText"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemPriceMedianText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPriceMedianCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemPriceMedian"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemPriceMedianText" />

        <TextView
            android:id="@+id/itemCardViewTextViewItemPriceCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/currency"
            app:layout_constraintStart_toEndOf="@+id/itemCardViewTextViewItemPrice"
            app:layout_constraintTop_toTopOf="@+id/itemCardViewTextViewItemPriceText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>